...
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_tourist">
            </ImageView>

            <EditText
                android:id="@+id/login_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
...
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_password"
...
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/login_error_tv"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:background="@drawable/btn_shape_selector_primary"
                android:text="@string/action_sign_in"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/login_register_btn"
                android:layout_width="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
...
