...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_current_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
...
